--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <nav class="navbar">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About Me</a></li>
-      <li><a href="#">Experience</a></li>
-      <li><a href="#">Certificates</a></li>
-      <li><a href="#">Contact Me</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#portfolio">Experience</a></li>
+      <li><a href="#certificates">Certificates</a></li>
+      <li><a href="#contact">Contact Me</a></li>
 
     </ul>
   </nav>
